--- a/gerenciamento-mercadoria/gerenciamento-mercadoria.csproj
+++ b/gerenciamento-mercadoria/gerenciamento-mercadoria.csproj
@@ -224,6 +224,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Mercadoria\Index.cshtml" />
+    <Content Include="Views\Mercadoria\AtualizarMercadoria.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
