Implementa funcionalidade de atualizar saida registrada

--- a/gerenciamento-mercadoria/gerenciamento-mercadoria.csproj
+++ b/gerenciamento-mercadoria/gerenciamento-mercadoria.csproj
@@ -242,6 +242,7 @@
     <Content Include="Views\Entrada\Index.cshtml" />
     <Content Include="Views\Entrada\AtualizarEntrada.cshtml" />
     <Content Include="Views\Saida\Index.cshtml" />
+    <Content Include="Views\Saida\AtualizarSaida.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
