--- a/gerenciamento-mercadoria/Web.config
+++ b/gerenciamento-mercadoria/Web.config
@@ -15,7 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+	  <globalization culture="pt-BR" uiCulture="pt-BR" />
+	  <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <runtime>
